# missioncontrol

./: .dockerignore  .env.dev.example  .env.example  .gitignore  .mcp.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MISSIONCONTROL_PHILOSOPHY.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  TODO.md  TRADEMARK_POLICY.md  docker-compose.dev.yml  docker-compose.mc-dev.yml  docker-compose.quickstart.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml
integrations/mc/: Cargo.toml  Dockerfile  README.md  install.sh  kluster-1559dba2c43e-update-2026-03-24.md  uninstall.sh
integrations/mc-mesh/: Cargo.toml  Makefile  README.md
integrations/mc-mesh/crates/mc-mesh/: Cargo.toml
integrations/mc-mesh/crates/mc-mesh-core/: Cargo.toml
integrations/mc-mesh/crates/mc-mesh-core/src/: agent_runtime.rs  capability_dispatcher.rs  client.rs  lib.rs  machine.rs  paths.rs  progress.rs  types.rs
integrations/mc-mesh/crates/mc-mesh-packs/: Cargo.toml
integrations/mc-mesh/crates/mc-mesh-packs/packs/argocd-observe/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/aws-readonly/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/az-readonly/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/base/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/docker-observe/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/family-governance/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/gcloud-aiplatform/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/gcloud-readonly/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/gh-readonly/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/git-readonly/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/helm-observe/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/incus-readonly/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/kubectl-observe/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/packs/podman-observe/: pack.yaml
integrations/mc-mesh/crates/mc-mesh-packs/src/: builtin.rs  error.rs  lib.rs  manifest.rs  policy.rs  registry.rs  tests.rs
integrations/mc-mesh/crates/mc-mesh-receipts/: Cargo.toml
integrations/mc-mesh/crates/mc-mesh-receipts/src/: error.rs  lib.rs  store.rs  types.rs
integrations/mc-mesh/crates/mc-mesh-runtimes/: Cargo.toml
integrations/mc-mesh/crates/mc-mesh-runtimes/src/: claude_code.rs  codex.rs  gemini.rs  goose.rs  harness.rs  lib.rs  shared.rs
integrations/mc-mesh/crates/mc-mesh-sandbox/: Cargo.toml
integrations/mc-mesh/crates/mc-mesh-sandbox/src/: error.rs  jail.rs  lib.rs  linux.rs  macos.rs  seccomp.rs  stub.rs  types.rs
integrations/mc-mesh/crates/mc-mesh-secrets/: Cargo.toml
integrations/mc-mesh/crates/mc-mesh-secrets/src/: client.rs  config.rs  error.rs  keyring.rs  lib.rs  redact.rs  resolver.rs  session.rs  token_cache.rs  types.rs
integrations/mc-mesh/crates/mc-mesh-sync/: Cargo.toml
integrations/mc-mesh/crates/mc-mesh-sync/src/: client.rs  error.rs  lib.rs  types.rs
integrations/mc-mesh/crates/mc-mesh-work/: Cargo.toml
integrations/mc-mesh/crates/mc-mesh-work/src/: claim.rs  lib.rs  task.rs
integrations/mc-mesh/crates/mc-mesh/src/: attach_gateway.rs  config.rs  daemon.rs  main.rs  mgmt_gateway.rs  secrets_gateway.rs  supervisor.rs  task_loop.rs
integrations/mc-mesh/docs/superpowers/plans/: 2026-04-25-mc-phase2a.md  2026-04-26-mc-phase3.md
integrations/mc-mesh/docs/superpowers/specs/: 2026-04-25-mc-phase2a-design.md
integrations/mc-mesh/scripts/: e2e-test.sh  install.sh
integrations/mc-mesh/systemd/: mc-mesh.service
integrations/mc-mesh/tests/e2e/: phase3_smoke.sh
integrations/mc-server/: Cargo.toml  Dockerfile
integrations/mc-server/src/: auth.rs  db.rs  lib.rs  main.rs  server.rs  state.rs
integrations/mc-server/src/models/: agent.rs  approval.rs  auth.rs  kluster.rs  mission.rs  mod.rs  run.rs  task.rs
integrations/mc-server/src/routes/: agents.rs  ai.rs  approvals.rs  artifacts.rs  auth.rs  budgets.rs  chat_integrations.rs  docs.rs  event_triggers.rs  evolve.rs  explorer.rs  family_governance.rs  feedback.rs  google_chat_integrations.rs  governance.rs  health.rs  hooks.rs  ingestion.rs  klusters.rs  mcp.rs  mission_packs.rs  missions.rs  mod.rs  oidc_web.rs  onboarding.rs  ops.rs  persistence.rs  profiles.rs  proxy.rs  raft.rs  remotectl.rs  runs.rs  runtime.rs  scheduled_jobs.rs  schema_pack.rs  search.rs  skills.rs  slack_integrations.rs  tasks.rs  teams_integrations.rs  (+2 more)
integrations/mc-server/tests/: test_health.rs  test_proxy.rs  test_routes.rs
integrations/mc/crates/mc-tui/: Cargo.toml
integrations/mc/crates/mc-tui-widgets/: Cargo.toml
integrations/mc/crates/mc-tui-widgets/src/: lib.rs  secrets_tree.rs  status_bar.rs  theme.rs
integrations/mc/crates/mc-tui/src/: app.rs  data.rs  lib.rs  theme.rs  work.rs
integrations/mc/crates/mc-tui/src/screens/: agent_feed.rs  (+6 more)
integrations/mc/src/: agent_context.rs  auth.rs  booster.rs  channel.rs  claude.rs  client.rs  codex.rs  commands.rs  compat.rs  config.rs  daemon.rs  discover.rs  dispatch.rs  drift.rs  evolve.rs  gemini.rs  goose.rs  governance.rs  launch.rs  lib.rs  main.rs  maintenance.rs  mcp_server.rs  mcp_stdio.rs  mcp_tools.rs  mesh.rs  ops.rs  output.rs  remote.rs  run.rs  runtime.rs  schema_pack.rs  secrets.rs  solo_supervisor.rs  task_md.rs  ui.rs  update.rs
integrations/mc/src/cmd/: capabilities.rs  init.rs  mod.rs  receipts.rs  run.rs  sync.rs
integrations/mc/systemd/: mc-node.service
integrations/mc/tests/: client.rs  evolve.rs  mcp_startup.rs  profile_cli.rs  schema_pack.rs  test_discover.rs  test_multi_server.rs  test_sse_feed.rs
integrations/missioncontrol-mcp/: Dockerfile  README.md  pyproject.toml
integrations/missioncontrol-mcp/src/missioncontrol_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
integrations/missioncontrol-mcp/tests/: test_explorer.py  test_server.py
mc-mesh/crates/mc-mesh/: Cargo.toml
mc-mesh/crates/mc-mesh/src/: attach_gateway.rs  supervisor.rs  task_loop.rs
(+502 files in other folders)
