[package]
name = "mc-server"
version = "0.1.0"
edition = "2024"
authors = ["MissionControl Engineers <support@missioncontrol.ai>"]
description = "MissionControl server node — Raft-backed HTTP API + distributed state"
license = "Apache-2.0"

[[bin]]
name = "mc-server"
path = "src/main.rs"

[lib]
name = "mc_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.34", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4"] }
dirs = "4"

[dev-dependencies]
axum-test = "20"
tempfile = "3.9"
wiremock = "0.6"
