[package]
name = "mc-server"
version = "0.1.0"
edition = "2024"
authors = ["MissionControl Engineers <support@missioncontrol.ai>"]
description = "MissionControl server node — Raft-backed HTTP API + distributed state"
license = "Apache-2.0"

[[bin]]
name = "mc-server"
path = "src/main.rs"

[lib]
name = "mc_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.34", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4"] }
dirs = "4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
flate2 = "1.0"
tar = "0.4"
tokio-stream = "0.1"
futures-util = "0.3"
tempfile = "3.9"

[dev-dependencies]
axum-test = "20"
wiremock = "0.6"
