[package]
name = "mc"
version = "0.1.6"
edition = "2024"
authors = ["MissionControl Engineers <support@missioncontrol.ai>"]
description = "Rust-native MCP bridge for Mission Control"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rumqttc = "0.18"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.4"
urlencoding = "2.1"
futures-util = "0.3"
axum = { version = "0.8", features = ["macros"] }
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hyper = "1.8.1"
wasmtime = "16"
wat = "1.0"
dirs = "4"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
rpassword = "7"
open = "5"
base64 = "0.22"
tar = "0.4"
[dev-dependencies]
httpmock = "0.6"
wasmtime = "16"
wat = "1.0"
tempfile = "3.9"
