[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "missioncontrol-mcp"
version = "0.1.1"
description = "MCP stdio bridge for MissionControl API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["paho-mqtt"]

[project.scripts]
missioncontrol-mcp = "missioncontrol_mcp.server:main"
missioncontrol-explorer = "missioncontrol_mcp.explorer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
