[package]
name = "mc-mesh"
version = "0.1.0"
edition = "2024"
description = "mc-mesh daemon — work-first agent coordination for MissionControl"
license = "Apache-2.0"

[[bin]]
name = "mc-mesh"
path = "src/main.rs"

[dependencies]
mc-mesh-core = { path = "../mc-mesh-core" }
mc-mesh-work = { path = "../mc-mesh-work" }
mc-mesh-runtimes = { path = "../mc-mesh-runtimes" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
