[package]
name = "mc-mesh-core"
version = "0.4.0"
edition = "2024"
description = "Shared types, client, progress events, and AgentRuntime trait for mc-mesh"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
portable-pty = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
mc-mesh-packs = { path = "../mc-mesh-packs" }
mc-mesh-secrets = { path = "../mc-mesh-secrets" }
mc-mesh-receipts = { path = "../mc-mesh-receipts" }

[dev-dependencies]
tempfile = "3.9"
