[package]
name = "mc-mesh-packs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
mc-mesh-sandbox = { path = "../mc-mesh-sandbox" }
mc-mesh-secrets = { path = "../mc-mesh-secrets" }
