[package]
name = "mc-mesh-secrets"
version = "0.3.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true }
