[package]
name = "mc-mesh-sync"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
