[package]
name = "mc-mesh-work"
version = "0.3.0"
edition = "2024"
description = "Work model: task dispatch, graph, claim, messaging, and watchdog for mc-mesh"
license = "Apache-2.0"

[dependencies]
mc-mesh-core = { path = "../mc-mesh-core" }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
