[package]
name = "mc-tui"
version = "0.3.0"
edition = "2024"
description = "Ratatui terminal UI for MissionControl"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
async-trait = "0.1"
dirs = "4"

mc-tui-widgets = { path = "../mc-tui-widgets" }
mc-mesh-secrets = { path = "../../../mc-mesh/crates/mc-mesh-secrets" }

[dev-dependencies]
tempfile = "3.9"
